# Nova_Backend_Rust-main

./: .gitignore  Cargo.toml  Node_Set.txt  README.md  nohup.out  openapi.yml  tx_scan_tool_config.yaml
backend/: Cargo.toml
backend/src/: main.rs  params_structs.rs  routes.rs
db/: Cargo.toml  docker-compose.yml
db/src/: lib.rs  tables.rs
nova-client/: Cargo.toml
nova-client/src/: lib.rs
nova-client/src/nft_apis/: mod.rs  response_structs.rs  user.rs
nova-client/src/token_apis/: mod.rs  response_structs.rs  user.rs
nova-client/src/utils/: mod.rs  sync_address_transactions.rs
searcher-client/: Cargo.toml
searcher-client/src/: lib.rs  main.rs
sei-client/: Cargo.toml
sei-client/src/: lib.rs
sei-client/src/apis/: _apis.rs  mod.rs
sei-client/src/field_data/: data_structions.rs  field_data_structions.rs  mod.rs  nft_transaction.rs  token_swap.rs
sei-client/src/field_data/data/: con1.json  con2.json  con3.json
sync-nft-holding/: Cargo.toml
sync-nft-holding/src/: lib.rs  main.rs
tx-scan-tools/: Cargo.toml
tx-scan-tools/src/: lib.rs  main.rs  rp_structs.rs
