[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version="4.7.0",features=["openssl"]}
actix-cors={version="0.7.0"}
openssl={version="0.10.64"}
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json","cookies"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
dotenv = {version="0.15.0"}
serde = { version = "1.0.203", features = ["derive"] }
serde_json={version = "1.0.118"}

# nova tools

# client
nova-client={path="../nova-client"} 

#db
db={path="../db"}

chrono="0.4.38"