[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
# sei-client={path = "../sei-client"}
serde = { version = "1.0.203", features = ["derive"] }
serde_json={version = "1.0.118"}

sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.38.0", features = ["full"] }
chrono = {version = "0.4.38",features=["serde"]}
dotenv = {version="0.15.0"}
sei-client={path=  "../sei-client"}

