[package]
name = "searcher-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.38.0", features = ["full"] }
# tokio-tungstenite = "0.23.1"
websocket="0.27.1"
futures-util = "0.3"
futures="0.3.21"
anyhow = "1.0.53"
serde_json="1.0.118"
sei-client={path="../sei-client"}
db={path="../db"}