[package]
name = "sei-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json","cookies"] }
url = "2.5.0"

tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json={version = "1.0.0"}

base64 = "0.22.1"

# db={path="../db"}