[package]
name = "tx-scan-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json","cookies"] }
url = "2.5.0"

tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json={version = "1.0.0"}
serde_yaml="0.9.34+deprecated"

base64 = "0.22.1"
anyhow="1.0.86"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "macros"] }

sei-client={path="../sei-client"}
db={path="../db"}